--- a/platformio.ini
+++ b/platformio.ini
@@ -1,19 +1,14 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:lionbit]
 platform = espressif32
 board = lionbit
+monitor_speed = 115200 
+simultaneous_upload_ports = lionbit.local:3232, /dev/ttyUSB*,  COM*
+monitor_filters = time, esp32_exception_decoder
 framework = arduino
-monitor_speed = 115200
+
 lib_deps = 
 	https://github.com/LionBit-Sri-Lanka/main_libs.git
 	https://github.com/LionBit-Sri-Lanka/main_display.git
+	https://github.com/LionBit-Sri-Lanka/wifiupload.git	
 	thinger-io/thinger.io@^2.21.1
+	adafruit/Adafruit Unified Sensor@^1.1.4
